# screeps-clockwork

./: .cz.toml  .env.sample  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml  config.yml  docker-compose.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  reset-docker.sh  resume-docker.sh  rollup.config.cjs  rollup.config.js  screeps.sample.json  tsconfig.base.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  typedoc.json  types.d.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deployment.yml  jekyll-gh-pages.yml  publish.yml
benches/: README.md  distance_map.rs
benches/fixtures/: mod.rs  private_server_sector.rs  realistic_rooms.rs
benches/wasm/: distance-map.bench.mjs  distance-map.bench.ts  fixtures.mjs  fixtures.ts  wrapper-boundary.bench.ts
core/: .gitignore  Cargo.toml
core/src/: lib.rs
docker/screeps-server-node-flags/: Dockerfile  node-with-v8-flags
docs/: index.md  scenarios.md  testing.md
docs/architecture/: index.md  pathing.md
docs/dependencies/: pathfinding.md  serialization.md
docs/primitives/: astar.md  breadth-first-search.md  costmatrix.md  dijkstras-algorithm.md  distance.md  fatigue.md  flowfield.md  geometry.md  index.md  multi-room.md  path.md  pathfinding.md  portals.md  room.md  roomposition.md  traffic.md
docs/scenarios/: 1_single_room_p2p_navigation.md  2_single_room_a2p_navigation.md  3_multi_room_p2p_navigation.md
docs/wasm/: boundary-hypotheses.md  boundary.md  cleanup.md  index.md
lib/: lib.rs  utils.rs
lib/algorithms/: breadth_first_search.rs  mod.rs
lib/datatypes/: cost_matrix.rs  distance_map.rs  flow_field.rs  mod.rs  mono_flow_field.rs  path.rs  (+6 more)
screeps-clockwork/: package.json  rollup.config.js
src/: index.ts  lib.rs
test/: main.ts
test-bot/: package.json  rollup.config.js  tsconfig.json  types.d.ts
(+147 files in other folders)
