[package]
name = "screeps-clockwork"
version = "0.13.0"
authors = ["Jon <jon.winsley@gmail.com>"]
edition = "2018"
description = "A WASM movement library for Screeps"
license-file = "LICENSE"
repository = "https://github.com/glitchassassin/screeps-clockwork"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib/lib.rs"

[features]
default = ["console_error_panic_hook"]
bench = []

[dependencies]
js-sys = "0.3"
screeps-game-api = "0.23"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "distance_map"
harness = false
required-features = ["bench"]

[profile.release]
# Tell `rustc` to optimize for small code size.
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = [
  "-O4",
  "--enable-simd",
  "--enable-relaxed-simd",
  "--enable-bulk-memory",
  "--enable-reference-types",
  "--enable-multivalue",
  "--enable-sign-ext",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-extended-const",
  "--enable-tail-call"
]
